@@ -1,6 +1,7 @@
 package snakeserver;
 import java.awt.Point;
 import java.io.BufferedReader;
+import java.io.OutputStreamWriter;
 import java.util.LinkedList;
 
 public class Player implements Runnable
@@ -14,15 +15,32 @@ public class Player implements Runnable
 	private boolean isAlive;
 	private int direction;
 	private int color;
+	private OutputStreamWriter out;
 	
+	public void sendString(String s)
+	{
+		try
+		{
+			out.write(s+"\n");
+			out.flush();
+		}
+		catch (Exception e)
+		{
+			System.out.println("Error sendingString in Player.sendString: "+e);
+		}
+	}
 	public void die()
 	{
 		isAlive=false;
-		//sendString("FUCKOUY You sucked");
+		sendString("FUCKYOU You sucked");
 	}
 	public int getColor()
 	{
 		return color;
+	}
+	public void setColor(int color)
+	{
+		this.color=color;
 	}
 	public LinkedList<Point> getPoints()
 	{
@@ -36,27 +54,23 @@ public class Player implements Runnable
 	{
 		return removedPoint;
 	}
-	public Player(BufferedReader in, int x, int y, int color)
+	public Player(BufferedReader in, OutputStreamWriter out, int x, int y)
 	{
-		this.color=color;
+		this.out=out;
 		GAMEWIDTH=SnakeServer.GAMEWIDTH;
 		GAMEHEIGHT=SnakeServer.GAMEHEIGHT;
 		sockIn = in;
 		Points = new LinkedList<Point>();
-		Points.add(new Point(x, y+color));
-		Points.add(new Point(x+1, y+color));
-		Points.add(new Point(x+2, y+color));
-		Points.add(new Point(x+3, y+color));
-		Points.add(new Point(x+4, y+color));
-		Points.add(new Point(x+5, y+color));
-		Points.add(new Point(x+6, y+color));
+		for (int k=0;k<=6;k++)
+			Points.add(new Point(x+k, y+color));
 		isAlive=true;
 		new Thread(this).start();
+		direction=0;
 	}
 	public void doStep()
 	{
-		removedPoint=Points.get(0);
-		Points.remove(0);
+		removedPoint=Points.getFirst();
+		Points.remove(removedPoint);
 		Point last = Points.getLast();
 		Point pnew=null;
 		switch (direction)
@@ -95,26 +109,41 @@ public class Player implements Runnable
 	}
 	public void run()
 	{
+		boolean WartePhase=true;
 		while (isAlive)
 		{
 			try
 			{
-				String command = sockIn.readLine();
-				System.out.println("Player got:"+command);
-				int tmpdirection = direction;
-				if (command.equals("STOIBER"))
-					tmpdirection--;
-				if (command.equals("LAFONTAINE"))
-					tmpdirection++;
-				if (tmpdirection==4)
-					tmpdirection=0;
-				if (tmpdirection==-1)
-					tmpdirection=3;
-				direction=tmpdirection;
+				String packet = sockIn.readLine();
+				String command = packet.split(" ", 3)[0];
+				if (WartePhase)
+				{
+					if (command.equals("IWANTFUN"))
+					{
+						SnakeServer.addPlayer(this, packet.split(" ", 3)[2]);
+						WartePhase=false;
+						sendString("ATTENTION ff0000 1");
+						sendString("GOFORREST");
+					}
+				}
+				else
+				{
+					int tmpdirection = direction;
+					if (command.equals("STOIBER"))
+						tmpdirection--;
+					if (command.equals("LAFONTAINE"))
+						tmpdirection++;
+					if (tmpdirection==4)
+						tmpdirection=0;
+					if (tmpdirection==-1)
+						tmpdirection=3;
+					direction=tmpdirection;
+				}
 			}
 			catch (Exception e)
 			{
 				isAlive=false;
+				SnakeServer.removePlayer(this);
 			}
 		}
 	}
